# SingleAgent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  usermanual.md
.github/workflows/: ci.yml
agents/: __init__.py  planner.py
agents/customer-agent/: agent.py  config.yaml
agents/fraud-agent/: agent.py  config.yaml
agents/loan-agent/: agent.py  config.yaml
agents/recommendation-agent/: agent.py  config.yaml
agents/shared/: __init__.py  base.py  config_loader.py  services.py
agents/support-agent/: agent.py  config.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api-gateway/kong/: kong.yml
app/: config.py  main.py
app/schemas/: chat.py
ci-cd/argo-cd/: application.yaml
ci-cd/github-actions/: platform-ci.yml
ci-cd/sonar/: sonar-project.properties
deployments/helm/: Chart.yaml  values.yaml
deployments/helm/templates/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deployments/kubernetes/: api-deployment.yaml  configmap.yaml
deployments/terraform/: main.tf
docs/: architecture.md  uml-artifacts.md  user-manual.md
documentragsystem/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
documentragsystem/app/: config.py  main.py
documentragsystem/app/api/: __init__.py  upload.py
documentragsystem/app/schemas/: upload.py
documentragsystem/app/services/: idempotency.py  kafka_producer.py  storage.py  upload_service.py
documentragsystem/docs/: architecture.md  uml-artifacts.md
documentragsystem/shared/: __init__.py  models.py
documentragsystem/tests/: conftest.py  test_pipeline.py  test_upload.py
documentragsystem/worker/: consumer.py  main.py
documentragsystem/worker/handlers/: ingestion.py
documentragsystem/worker/pipeline/: chunker.py  embeddings.py  parser.py  vector_store.py
frontend/: app.py
frontend/nextjs/: next.config.js  package-lock.json  package.json
frontend/react/: index.html  package.json
frontend/react/src/: App.tsx  index.css
infra/helm/: Chart.yaml  values.yaml
infra/helm/templates/: deployment.yaml  service.yaml
infra/terraform/: main.tf
mcp-servers/confluence/: server.py
mcp-servers/github/: server.py
mcp-servers/jira/: server.py
mcp-servers/oracle/: server.py
mcp-servers/postgres/: server.py
mcp-servers/salesforce/: server.py
mcp-servers/sap/: server.py
mcp_servers/: __init__.py  registry.py
mcp_servers/shared/: base_server.py
observability/grafana/provisioning/: dashboards.yml
observability/metrics/: registry.py
observability/opentelemetry/: setup.py
observability/prometheus/: prometheus.yml
orchestrator/langgraph/: graph.py
orchestrator/state-management/: store.py
orchestrator/state_management/: store.py
orchestrator/workflows/: runner.py
rag/: _loader.py
rag/chunking/: strategies.py
rag/embeddings/: provider.py
rag/retrievers/: hybrid.py
rag/vector-db/: client.py
rag/vector_db/: client.py
retrieval/: hybrid_search.py
scripts/: healthcheck.py
security/: input_guard.py
services/: router.py
services/audit-service/: main.py
services/auth-service/: main.py
services/gateway-service/: main.py
services/notification-service/: main.py
services/user-service/: main.py
shared/: __init__.py  safe_math.py  yaml_config.py
src/enterprise_agent_platform/: __init__.py  main.py
src/enterprise_agent_platform/api/: __init__.py  deps.py  exception_handlers.py
src/enterprise_agent_platform/application/: __init__.py
src/enterprise_agent_platform/core/: __init__.py  config.py  exceptions.py  logging.py
src/enterprise_agent_platform/domain/: __init__.py
tests/: conftest.py  test_api.py  test_exceptions.py  test_monorepo.py  test_production.py  test_tools.py
tools/document-parser/: tool.py
tools/document_parser/: tool.py
tools/email/: tool.py
tools/pdf/: tool.py
tools/reporting/: tool.py
tools/search/: tool.py
(+31 files in other folders)
