[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-agent-platform"
version = "1.0.0"
description = "Production-ready enterprise AI agent orchestration platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Enterprise Agent Platform Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "tenacity>=9.0.0",
    "openai>=1.55.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "email-validator>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]
observability = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]

[project.scripts]
eap = "enterprise_agent_platform.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_agent_platform"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", ".", "shared"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "agents", "orchestrator", "rag", "mcp_servers", "tools", "services", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/enterprise_agent_platform/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/enterprise_agent_platform", "agents", "orchestrator", "rag", "mcp_servers", "tools"]
omit = ["*/tests/*"]
