[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "production-ai-app"
version = "0.1.0"
description = "Production-ready AI app scaffold"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "structlog>=25.4.0",
  "prometheus-client>=0.22.0",
  "httpx>=0.28.0",
  "python-jose[cryptography]>=3.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
  "black>=25.1.0",
  "mypy>=1.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "services", "agents", "retrieval", "security", "observability"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
