[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "documentragsystem"
version = "0.1.0"
description = "End-to-end document upload and RAG ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.20",
  "boto3>=1.38.0",
  "aiokafka>=0.12.0",
  "structlog>=25.4.0",
  "httpx>=0.28.0",
  "pypdf>=5.6.0",
  "python-docx>=1.1.2",
  "chromadb>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "worker", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
